--- a/recipes/feijoada.html
+++ b/recipes/feijoada.html
@@ -8,7 +8,10 @@
 </head>
 
 <body>
+    <h1><u>Feijoada</u></h1>
+    <img src="../images/feijoada.jpg">
 
+    <p><a href="../index.html">Go to Main Page</a></p>
 </body>
 
 </html>
