Add style.css with some configs, just figuring stuff out...

--- a/index.html
+++ b/index.html
@@ -4,12 +4,13 @@
 <head>
     <meta charset="utf-8">
     <title>Odin Recipes</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1><u>Recipes</u></h1>
+    <h1 class="t"><strong class="e">R</strong>ecipes</h1>
     <p>These are some of my favorite dishes:</p>
     <ul>
-        <li><a href="recipes/feijoada.html">Feijoada</a></li>
+        <li class="t"><a href="recipes/feijoada.html" class="link">Feijoada</a></li>
     </ul>
 </body>
 </html>
