fix feijoada image path

--- a/recipes/feijoada.html
+++ b/recipes/feijoada.html
@@ -11,7 +11,7 @@
 <body>
   <h1><strong class="e">F</strong>eijoada</h1>
     
-  <img src="../images/feijoada.jpeg" alt="Feijoada" width="344">
+  <img src="../images/feijoada.jpg" alt="Feijoada" width="344">
     
   <p> 
     The basic ingredients of feijoada are beans and fresh pork or beef. In Brazil, it is usually made with black beans. The stew is best prepared over low heat in a thick clay pot.
