elaborates a bunch of style stuff

--- a/index.html
+++ b/index.html
@@ -7,10 +7,18 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1 class="t"><strong class="e">R</strong>ecipes</h1>
-    <p>These are some of my favorite dishes:</p>
-    <ul>
-        <li class="t"><a href="recipes/feijoada.html" class="link">Feijoada</a></li>
-    </ul>
+    <h1>
+        <strong class="e">R</strong>ecipes
+    </h1>
+    <div class="recipe-list">These are some of my favorite dishes:
+        <div>
+            <a href="recipes/feijoada.html">
+                <button title="Feijoada">
+                    <img src="images/feijoada.jpg" alt="Feijoada" width="300">
+                    <div id="feijoada" class="e">Feijoada</div>
+                </button>
+            </a>
+        </div>
+    </div>
 </body>
 </html>
