overhauls style and html structuring and adds reset.css

--- a/index.html
+++ b/index.html
@@ -1,24 +1,41 @@
 <!DOCTYPE html>
 
 <html lang="en">
+
 <head>
-    <meta charset="utf-8">
-    <title>Odin Recipes</title>
-    <link rel="stylesheet" href="style.css">
+	<meta charset="utf-8">
+	<title>Odin Recipes</title>
+	<link rel="stylesheet" href="reset.css">
+	<link rel="stylesheet" href="style.css">
 </head>
+
 <body>
-    <h1>
-        <strong class="e">R</strong>ecipes
-    </h1>
-    <div class="recipe-list">These are some of my favorite dishes:
-        <div>
-            <a href="recipes/feijoada.html">
-                <button title="Feijoada">
-                    <img src="images/feijoada.jpg" alt="Feijoada" width="300">
-                    <div id="feijoada" class="e">Feijoada</div>
-                </button>
-            </a>
-        </div>
-    </div>
+
+<div class="main">
+
+<div class="header">
+	<h1>Odin Recipes</h1>
+</div>
+
+<div class="main-plane">
+
+<p>
+This is a list of my favorite dishes:
+</p>
+
+<div class="recipe-list">
+
+	<form action="recipes/feijoada.html">
+	<input type="image" src="images/feijoada.jpg" href="recipes/feijoada.html">
+	</form>
+	<div>Feijoada</div>
+
+</div><!--END recipe-list END-->
+
+</div><!--END main-plane END-->
+
+</div>
+
 </body>
+
 </html>
