--- a/index.html
+++ b/index.html
@@ -5,34 +5,25 @@
 <head>
 	<meta charset="utf-8">
 	<title>Odin Recipes</title>
-	<link rel="stylesheet" href="reset.css">
 	<link rel="stylesheet" href="style.css">
 </head>
 
 <body>
 
-<div class="main">
-
-<div class="header">
-	<h1>Odin Recipes</h1>
-</div>
-
-<div class="main-plane">
+<h1>Odin Recipes</h1>
 
 <p>
 This is a list of my favorite dishes:
 </p>
 
-<div class="recipe-list">
+<div>
 
-	<form action="recipes/feijoada.html">
-	<input type="image" src="images/feijoada.jpg" href="recipes/feijoada.html">
-	</form>
+	<button>
+		<a href="recipes/feijoada.html">
+			<img src="images/feijoada.jpg" alt="Feijoada">
+		</a>
+	</button>
 	<div>Feijoada</div>
-
-</div><!--END recipe-list END-->
-
-</div><!--END main-plane END-->
 
 </div>
 
