--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
 <html lang="en">
 
 <head>
-	<meta charset="utf-8">
+	<meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<title>Odin Recipes</title>
 	<link rel="stylesheet" href="style.css">
 </head>
